# Traffic-Light-System

./: CMakeLists.txt
inc/: ILane.h  ITrafficLight.h  binarySemaphore.h  lane.h  mockLane.h  mockTrafficLight.h  trafficLight.h  trafficLightManager.h
src/: CMakeLists.txt  binarySemaphore.cpp  lane.cpp  main.cpp  trafficLight.cpp  trafficLightManager.cpp
test/: CMakeLists.txt  binarySemaphoreTest.cpp  laneTest.cpp  mockTrafficLightManagerTest.cpp  mockTrafficLightTest.cpp  trafficLightManagerTest.cpp
